attempting to fix broken ui from h5bp reset styles

--- a/static/css/pages/_accounts.scss
+++ b/static/css/pages/_accounts.scss
@@ -193,3 +193,15 @@
 		}
 	}
 }
+
+/** Reconciliation form styles **/
+
+.reconcile-form .new span {
+  max-width: 12em;
+  display: inline-block;
+}
+
+
+.reconcile-form .new {
+  padding: 1em;
+}
